fix tools coming soon button on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -176,7 +176,8 @@ main {
   padding-right: 20px;
   padding-top: 12px;
   padding-bottom: 12px;
-  width: 339px;
+  width:100%;
+  max-width: 339px;
   height: 56px;
   border-radius: 12.6858px;
 
